# pyviscount

./: LICENSE  README.md  main.py  pyproject.toml  req.txt
data/: config.ini  tide-search.params.txt
examples/: test.ipynb
pyviscount/: constants.py  ground_truth.py  main.py  parsers.py  partition.py  partition_mode.py  run.py  scores.py  searchspace_analysis.py  sequence_processing.py  utils.py
src/: config.ini  test.ipynb
src/pyviscount/: constants.py  correction.py  decoy_generation.py  exporter.py  fdr.py  initializer.py  optimal_selection.py  plot.py  postsearch.py  presearch.py  run.py  template.py  utils.py
src/tests/: config.ini  test_presearch.py
tests/: test_postsearch.py
