[project]
name = "partipy"
version = "0.0.1"
authors = [
  { name="Dominik Madej", email="dmadej@ust.hk"},
]
description = "Validation by partition for shotgun proteomics data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dommad/partipy"
"Bug Tracker" = "https://github.com/dommad/partipy/issues"