[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyviscount"
version = "0.1.0"
description = "Validation of FDR estimation methods by search space partition"

readme = "README.md"

authors = [
    {name = "Dominik Madej", email = "dmadej@ust.hk"},
]

requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",    
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyviscount = "pyviscount.main:main"

[tool.setuptools]
packages = ["pyviscount"]
